<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperSocial</string>

    <string name="login_label">Log in</string>
    <string name="intent_scheme">oauth</string>
    <string name="intent_host">cprest</string>

    <string name="twitter">Twitter</string>
    <string name="reddit">Reddit</string>

    <string name="twitter_switch">Post to Twitter</string>
    <string name="reddit_switch">Post to Reddit</string>

    <string name="login_btn">Log In</string>
    <string name="logout_btn">Log Out</string>
    <string name="post_btn">Post!</string>

    <string name="sample_desc">An app that allows users to view their feeds from all social media accounts in one platform. For now, users can view Reddit and Twitter feeds. More social media platforms will be added later.</string>
    <string name="sample_title">What is Super Social?</string>
    <string name="nav_home">Home</string>
    <string name="nav_post">Post</string>
    <string name="nav_settings">Settings</string>

</resources>