<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/twitterSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/stdmargin">


        <TextView
            android:id="@+id/tvTwitterSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twitter"
            android:textSize="@dimen/h1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnTwitterLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/stdmargin"
            android:textSize="@dimen/button"
            android:onClick="loginToRest"
            android:text="@string/login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTwitterSetting"/>

        <Button
            android:id="@+id/btnTwitterLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_btn"
            android:textSize="@dimen/button"
            android:layout_margin="@dimen/stdmargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTwitterLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/redditSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/stdmargin">

        <TextView
            android:id="@+id/tvRedditSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reddit"
            android:textSize="@dimen/h1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRedditLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textSize="@dimen/button"
            android:layout_margin="@dimen/stdmargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRedditSetting" />

        <Button
            android:id="@+id/btnRedditLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout_btn"
            android:textSize="@dimen/button"
            android:layout_margin="@dimen/stdmargin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRedditLogin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/menu_bottom_navigation" />

    </LinearLayout>
</FrameLayout>